<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame"
    tools:context=".AddEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBooking"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivBooking"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:src="@drawable/list"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below="@+id/cardBooking"
            android:layout_marginStart="175dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:id="@+id/layoutTglService"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTglService"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="12dp"
                            android:text="@string/tanggal_service"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputTglService"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginStart="130dp"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusTopStart="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTglService"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:hint="@string/tanggal_service"
                                android:inputType="date"
                                android:textSize="12sp" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutWaktuService"
                        android:layout_width="320dp"
                        android:layout_height="55dp"
                        android:layout_below="@id/layoutTglService"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/tvWaktuService"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="6dp"
                            android:text="@string/waktu_service"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputWaktuService"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginStart="130dp"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusTopStart="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etWaktuService"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:hint="@string/waktu_service"
                                android:inputType="time"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutJenisService"
                        android:layout_width="320dp"
                        android:layout_height="55dp"
                        android:layout_below="@id/layoutWaktuService"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/tvJenisService"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="6dp"
                            android:text="@string/jenis_service"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputJenisService"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginStart="130dp"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusTopStart="10dp">

                            <AutoCompleteTextView
                                android:id="@+id/etJenisService"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/jenis_service"
                                android:inputType="none"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutJenisKendaraan"
                        android:layout_width="320dp"
                        android:layout_height="55dp"
                        android:layout_below="@id/layoutJenisService"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/tvJenisKendaraan"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="6dp"
                            android:text="@string/jenis_kendaraan"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputJenisKendaraan"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginStart="130dp"
                            app:boxBackgroundColor="@color/white"
                            app:boxCornerRadiusBottomEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusTopStart="10dp">

                            <AutoCompleteTextView
                                android:id="@+id/etJenisKendaraan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/jenis_kendaraan"
                                android:inputType="none"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_button"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="260dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <Button
                            android:id="@+id/btn_cancel"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            android:text="@string/cancel" />

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            android:text="@string/save" />

                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </ScrollView>
</FrameLayout>