...
    <string name="user_location_permission_explanation">Apakah diperbolehkan?</string>
    <string name="user_location_permission_not_granted">Permintaan ditolak</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="profil_akun">Profil Akun</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="pilih_dari_galeri">Pilih dari Galeri</string>
    <string name="buka_kamera">Buka Kamera</string>
</resources>
